[metadata]
name              = Adafruit_Video_Looper
version           = 1.0.11
author            = Tony DiCola
author_email      = tdicola@adafruit.com
description       = Application to turn your Raspberry Pi into a dedicated looping video playback device, good for art installations, information displays, or just playing cat videos all day.
license           = GNU GPLv2
url               = https://github.com/adafruit/pi_video_looper


[options]
packages          = find:
install_requires  = 
    pyudev==0.23.2
    pygame==2.1.2
    six==1.16.0