[metadata]
name = Adafruit_Video_Looper
version = 1.0.11
author = Tony DiCola
author_email = tdicola@adafruit.com
description = Application to turn your Raspberry Pi into a dedicated looping video playback device, good for art installations, information displays, or just playing cat videos all day.
license = GNU GPLv2
project_urls =
    Bug Tracker = https://github.com/adafruit/pi_video_looper/issues
    Source Code = https://github.com/adafruit/pi_video_looper
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: Unix

[options]
packages          = find:
python_requires   = >=3.6
install_requires  = 
    pyudev==0.23.2
    pygame==2.1.2
    six==1.16.0